; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264dsp_msa.c_avc_biwgt_8x16_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264dsp_msa.c_avc_biwgt_8x16_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i32, i32, i32)* @avc_biwgt_8x16_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @avc_biwgt_8x16_msa(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca i32, align 4
  %47 = alloca i32, align 4
  %48 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %49 = load i32, i32* %14, align 4
  %50 = add nsw i32 %49, 1
  %51 = or i32 %50, 1
  %52 = load i32, i32* %11, align 4
  %53 = shl i32 %51, %52
  store i32 %53, i32* %14, align 4
  %54 = load i32, i32* %12, align 4
  %55 = load i32, i32* %13, align 4
  %56 = add nsw i32 %54, %55
  %57 = mul nsw i32 128, %56
  %58 = load i32, i32* %14, align 4
  %59 = add nsw i32 %58, %57
  store i32 %59, i32* %14, align 4
  %60 = load i32, i32* %12, align 4
  %61 = call i32 @__msa_fill_b(i32 %60)
  store i32 %61, i32* %20, align 4
  %62 = load i32, i32* %13, align 4
  %63 = call i32 @__msa_fill_b(i32 %62)
  store i32 %63, i32* %21, align 4
  %64 = load i32, i32* %14, align 4
  %65 = call i32 @__msa_fill_h(i32 %64)
  store i32 %65, i32* %48, align 4
  %66 = load i32, i32* %11, align 4
  %67 = add nsw i32 %66, 1
  %68 = call i32 @__msa_fill_h(i32 %67)
  store i32 %68, i32* %47, align 4
  %69 = load i32, i32* %21, align 4
  %70 = load i32, i32* %20, align 4
  %71 = call i32 @__msa_ilvev_b(i32 %69, i32 %70)
  store i32 %71, i32* %22, align 4
  store i32 2, i32* %15, align 4
  br label %72

72:                                               ; preds = %76, %7
  %73 = load i32, i32* %15, align 4
  %74 = add nsw i32 %73, -1
  store i32 %74, i32* %15, align 4
  %75 = icmp ne i32 %73, 0
  br i1 %75, label %76, label %265

76:                                               ; preds = %72
  %77 = load i32*, i32** %8, align 8
  %78 = load i32, i32* %10, align 4
  %79 = load i32, i32* %16, align 4
  %80 = load i32, i32* %17, align 4
  %81 = load i32, i32* %18, align 4
  %82 = load i32, i32* %19, align 4
  %83 = call i32 @LD4(i32* %77, i32 %78, i32 %79, i32 %80, i32 %81, i32 %82)
  %84 = load i32, i32* %10, align 4
  %85 = mul nsw i32 4, %84
  %86 = load i32*, i32** %8, align 8
  %87 = sext i32 %85 to i64
  %88 = getelementptr inbounds i32, i32* %86, i64 %87
  store i32* %88, i32** %8, align 8
  %89 = load i32, i32* %16, align 4
  %90 = load i32, i32* %17, align 4
  %91 = load i32, i32* %23, align 4
  %92 = call i32 @INSERT_D2_UB(i32 %89, i32 %90, i32 %91)
  %93 = load i32, i32* %18, align 4
  %94 = load i32, i32* %19, align 4
  %95 = load i32, i32* %24, align 4
  %96 = call i32 @INSERT_D2_UB(i32 %93, i32 %94, i32 %95)
  %97 = load i32*, i32** %8, align 8
  %98 = load i32, i32* %10, align 4
  %99 = load i32, i32* %16, align 4
  %100 = load i32, i32* %17, align 4
  %101 = load i32, i32* %18, align 4
  %102 = load i32, i32* %19, align 4
  %103 = call i32 @LD4(i32* %97, i32 %98, i32 %99, i32 %100, i32 %101, i32 %102)
  %104 = load i32, i32* %10, align 4
  %105 = mul nsw i32 4, %104
  %106 = load i32*, i32** %8, align 8
  %107 = sext i32 %105 to i64
  %108 = getelementptr inbounds i32, i32* %106, i64 %107
  store i32* %108, i32** %8, align 8
  %109 = load i32, i32* %16, align 4
  %110 = load i32, i32* %17, align 4
  %111 = load i32, i32* %25, align 4
  %112 = call i32 @INSERT_D2_UB(i32 %109, i32 %110, i32 %111)
  %113 = load i32, i32* %18, align 4
  %114 = load i32, i32* %19, align 4
  %115 = load i32, i32* %26, align 4
  %116 = call i32 @INSERT_D2_UB(i32 %113, i32 %114, i32 %115)
  %117 = load i32*, i32** %9, align 8
  %118 = load i32, i32* %10, align 4
  %119 = load i32, i32* %16, align 4
  %120 = load i32, i32* %17, align 4
  %121 = load i32, i32* %18, align 4
  %122 = load i32, i32* %19, align 4
  %123 = call i32 @LD4(i32* %117, i32 %118, i32 %119, i32 %120, i32 %121, i32 %122)
  %124 = load i32, i32* %16, align 4
  %125 = load i32, i32* %17, align 4
  %126 = load i32, i32* %27, align 4
  %127 = call i32 @INSERT_D2_UB(i32 %124, i32 %125, i32 %126)
  %128 = load i32, i32* %18, align 4
  %129 = load i32, i32* %19, align 4
  %130 = load i32, i32* %28, align 4
  %131 = call i32 @INSERT_D2_UB(i32 %128, i32 %129, i32 %130)
  %132 = load i32*, i32** %9, align 8
  %133 = load i32, i32* %10, align 4
  %134 = mul nsw i32 4, %133
  %135 = sext i32 %134 to i64
  %136 = getelementptr inbounds i32, i32* %132, i64 %135
  %137 = load i32, i32* %10, align 4
  %138 = load i32, i32* %16, align 4
  %139 = load i32, i32* %17, align 4
  %140 = load i32, i32* %18, align 4
  %141 = load i32, i32* %19, align 4
  %142 = call i32 @LD4(i32* %136, i32 %137, i32 %138, i32 %139, i32 %140, i32 %141)
  %143 = load i32, i32* %16, align 4
  %144 = load i32, i32* %17, align 4
  %145 = load i32, i32* %29, align 4
  %146 = call i32 @INSERT_D2_UB(i32 %143, i32 %144, i32 %145)
  %147 = load i32, i32* %18, align 4
  %148 = load i32, i32* %19, align 4
  %149 = load i32, i32* %30, align 4
  %150 = call i32 @INSERT_D2_UB(i32 %147, i32 %148, i32 %149)
  %151 = load i32, i32* %23, align 4
  %152 = load i32, i32* %24, align 4
  %153 = load i32, i32* %25, align 4
  %154 = load i32, i32* %26, align 4
  %155 = call i32 @XORI_B4_128_UB(i32 %151, i32 %152, i32 %153, i32 %154)
  %156 = load i32, i32* %27, align 4
  %157 = load i32, i32* %28, align 4
  %158 = load i32, i32* %29, align 4
  %159 = load i32, i32* %30, align 4
  %160 = call i32 @XORI_B4_128_UB(i32 %156, i32 %157, i32 %158, i32 %159)
  %161 = load i32, i32* %27, align 4
  %162 = load i32, i32* %23, align 4
  %163 = load i32, i32* %28, align 4
  %164 = load i32, i32* %24, align 4
  %165 = load i32, i32* %29, align 4
  %166 = load i32, i32* %25, align 4
  %167 = load i32, i32* %30, align 4
  %168 = load i32, i32* %26, align 4
  %169 = load i32, i32* %31, align 4
  %170 = load i32, i32* %33, align 4
  %171 = load i32, i32* %35, align 4
  %172 = load i32, i32* %37, align 4
  %173 = call i32 @ILVR_B4_SB(i32 %161, i32 %162, i32 %163, i32 %164, i32 %165, i32 %166, i32 %167, i32 %168, i32 %169, i32 %170, i32 %171, i32 %172)
  %174 = load i32, i32* %27, align 4
  %175 = load i32, i32* %23, align 4
  %176 = load i32, i32* %28, align 4
  %177 = load i32, i32* %24, align 4
  %178 = load i32, i32* %29, align 4
  %179 = load i32, i32* %25, align 4
  %180 = load i32, i32* %30, align 4
  %181 = load i32, i32* %26, align 4
  %182 = load i32, i32* %32, align 4
  %183 = load i32, i32* %34, align 4
  %184 = load i32, i32* %36, align 4
  %185 = load i32, i32* %38, align 4
  %186 = call i32 @ILVL_B4_SB(i32 %174, i32 %175, i32 %176, i32 %177, i32 %178, i32 %179, i32 %180, i32 %181, i32 %182, i32 %183, i32 %184, i32 %185)
  %187 = load i32, i32* %48, align 4
  %188 = load i32, i32* %22, align 4
  %189 = load i32, i32* %31, align 4
  %190 = call i32 @__msa_dpadd_s_h(i32 %187, i32 %188, i32 %189)
  store i32 %190, i32* %39, align 4
  %191 = load i32, i32* %48, align 4
  %192 = load i32, i32* %22, align 4
  %193 = load i32, i32* %32, align 4
  %194 = call i32 @__msa_dpadd_s_h(i32 %191, i32 %192, i32 %193)
  store i32 %194, i32* %40, align 4
  %195 = load i32, i32* %48, align 4
  %196 = load i32, i32* %22, align 4
  %197 = load i32, i32* %33, align 4
  %198 = call i32 @__msa_dpadd_s_h(i32 %195, i32 %196, i32 %197)
  store i32 %198, i32* %41, align 4
  %199 = load i32, i32* %48, align 4
  %200 = load i32, i32* %22, align 4
  %201 = load i32, i32* %34, align 4
  %202 = call i32 @__msa_dpadd_s_h(i32 %199, i32 %200, i32 %201)
  store i32 %202, i32* %42, align 4
  %203 = load i32, i32* %48, align 4
  %204 = load i32, i32* %22, align 4
  %205 = load i32, i32* %35, align 4
  %206 = call i32 @__msa_dpadd_s_h(i32 %203, i32 %204, i32 %205)
  store i32 %206, i32* %43, align 4
  %207 = load i32, i32* %48, align 4
  %208 = load i32, i32* %22, align 4
  %209 = load i32, i32* %36, align 4
  %210 = call i32 @__msa_dpadd_s_h(i32 %207, i32 %208, i32 %209)
  store i32 %210, i32* %44, align 4
  %211 = load i32, i32* %48, align 4
  %212 = load i32, i32* %22, align 4
  %213 = load i32, i32* %37, align 4
  %214 = call i32 @__msa_dpadd_s_h(i32 %211, i32 %212, i32 %213)
  store i32 %214, i32* %45, align 4
  %215 = load i32, i32* %48, align 4
  %216 = load i32, i32* %22, align 4
  %217 = load i32, i32* %38, align 4
  %218 = call i32 @__msa_dpadd_s_h(i32 %215, i32 %216, i32 %217)
  store i32 %218, i32* %46, align 4
  %219 = load i32, i32* %39, align 4
  %220 = load i32, i32* %40, align 4
  %221 = load i32, i32* %41, align 4
  %222 = load i32, i32* %42, align 4
  %223 = load i32, i32* %47, align 4
  %224 = call i32 @SRA_4V(i32 %219, i32 %220, i32 %221, i32 %222, i32 %223)
  %225 = load i32, i32* %43, align 4
  %226 = load i32, i32* %44, align 4
  %227 = load i32, i32* %45, align 4
  %228 = load i32, i32* %46, align 4
  %229 = load i32, i32* %47, align 4
  %230 = call i32 @SRA_4V(i32 %225, i32 %226, i32 %227, i32 %228, i32 %229)
  %231 = load i32, i32* %39, align 4
  %232 = load i32, i32* %40, align 4
  %233 = load i32, i32* %41, align 4
  %234 = load i32, i32* %42, align 4
  %235 = load i32, i32* %43, align 4
  %236 = load i32, i32* %44, align 4
  %237 = load i32, i32* %45, align 4
  %238 = load i32, i32* %46, align 4
  %239 = call i32 @CLIP_SH8_0_255(i32 %231, i32 %232, i32 %233, i32 %234, i32 %235, i32 %236, i32 %237, i32 %238)
  %240 = load i32, i32* %40, align 4
  %241 = load i32, i32* %39, align 4
  %242 = load i32, i32* %42, align 4
  %243 = load i32, i32* %41, align 4
  %244 = load i32, i32* %44, align 4
  %245 = load i32, i32* %43, align 4
  %246 = load i32, i32* %46, align 4
  %247 = load i32, i32* %45, align 4
  %248 = load i32, i32* %27, align 4
  %249 = load i32, i32* %28, align 4
  %250 = load i32, i32* %29, align 4
  %251 = load i32, i32* %30, align 4
  %252 = call i32 @PCKEV_B4_UB(i32 %240, i32 %241, i32 %242, i32 %243, i32 %244, i32 %245, i32 %246, i32 %247, i32 %248, i32 %249, i32 %250, i32 %251)
  %253 = load i32, i32* %27, align 4
  %254 = load i32, i32* %28, align 4
  %255 = load i32, i32* %29, align 4
  %256 = load i32, i32* %30, align 4
  %257 = load i32*, i32** %9, align 8
  %258 = load i32, i32* %10, align 4
  %259 = call i32 @ST_D8(i32 %253, i32 %254, i32 %255, i32 %256, i32 0, i32 1, i32 0, i32 1, i32 0, i32 1, i32 0, i32 1, i32* %257, i32 %258)
  %260 = load i32, i32* %10, align 4
  %261 = mul nsw i32 8, %260
  %262 = load i32*, i32** %9, align 8
  %263 = sext i32 %261 to i64
  %264 = getelementptr inbounds i32, i32* %262, i64 %263
  store i32* %264, i32** %9, align 8
  br label %72

265:                                              ; preds = %72
  ret void
}

declare dso_local i32 @__msa_fill_b(i32) #1

declare dso_local i32 @__msa_fill_h(i32) #1

declare dso_local i32 @__msa_ilvev_b(i32, i32) #1

declare dso_local i32 @LD4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @INSERT_D2_UB(i32, i32, i32) #1

declare dso_local i32 @XORI_B4_128_UB(i32, i32, i32, i32) #1

declare dso_local i32 @ILVR_B4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ILVL_B4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @__msa_dpadd_s_h(i32, i32, i32) #1

declare dso_local i32 @SRA_4V(i32, i32, i32, i32, i32) #1

declare dso_local i32 @CLIP_SH8_0_255(i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @PCKEV_B4_UB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ST_D8(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
